--- a/gb/21/7/26/n13115994.md
+++ b/gb/21/7/26/n13115994.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jwcced345/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jwcced345/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jwcced345/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jwcced345/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jwcced345/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jwcced345/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jwcced345/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jwcced345/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jwcced345/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jwcced345/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jwcced345/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jwcced345/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jwcced345/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jwcced345/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jwcced345/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jwcced345/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jwcced345/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jwcced345/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jwcced345/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jwcced345/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jwcced345/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jwcced345/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jwcced345/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jwcced345/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>谢金河：山雨欲来风满楼 中企陷入监管风暴</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/cd712edd207f212146ff0cb3dc1b516d-600x400.jpg" />
 <h6>7月23日，有媒体爆料中共当局拟对教育培训行业进行打击，在美国上市的中国教育股应声暴跌，资料照。（Andrew Burton/Getty Images）
 </h6>
 <hr>
-	<p>【大纪元2021年07月26日讯】（大纪元记者钟元台北报导）台湾财信传媒董事长谢金河在脸书上发文《山雨欲来风满楼：<ahref="https://github.com/jwcced345/djy/blob/master/gb/tag/%E4%B8%AD%E4%BC%81.md#1">中企</a>陷入<ahref="https://github.com/jwcced345/djy/blob/master/gb/tag/%E7%9B%91%E7%AE%A1%E9%A3%8E%E6%9A%B4.md#1">监管风暴</a>！》。他指出，中资在美国挂牌企业全面大跌，其中教育股更是全面惨跌，他认为中共的监管风暴，正持续升高。</p>
+	<p>【大纪元2021年07月26日讯】（大纪元记者钟元台北报导）台湾财信传媒董事长谢金河在脸书上发文《山雨欲来风满楼：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E4%BC%81.md#1">中企</a>陷入<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%9B%91%E7%AE%A1%E9%A3%8E%E6%9A%B4.md#1">监管风暴</a>！》。他指出，中资在美国挂牌企业全面大跌，其中教育股更是全面惨跌，他认为中共的监管风暴，正持续升高。</p>
 <p>谢金河24日在脸书表示，当天起床把全球金融市场扫描一遍，美国股市全面上涨，美国前5大市值企业都创新高，尤其是Google及FB涨幅都十分惊人，Google市值快挑战2兆美元，但令人吃惊的是中资在美国挂牌企业全面大跌。</p>
-<p>他说，这当中近期因为不听中央的话，到美国上市的滴滴，正面临把股权交出的两难局面，股价大跌逾20%，股价从上市首日最高的18.01跌到7.93美元，正好剩下一半。他在想，这是不是滴滴效应发酵？再仔细看，教育股全面惨跌，中国的<ahref="https://github.com/jwcced345/djy/blob/master/gb/tag/%E7%9B%91%E7%AE%A1%E9%A3%8E%E6%9A%B4.md#1">监管风暴</a>，正持续升高。</p>
-<p>“中共对补教业监管从严，重创过去在美国很受欢迎的教育股。”谢金河举例，像<ahref="https://github.com/jwcced345/djy/blob/master/gb/tag/%E6%96%B0%E4%B8%9C%E6%96%B9.md#1">新东方</a>在拆股前，股价最高199.74美元，一拆十后，23日股价大跌52.2%，只剩2.91美元，<ahref="https://github.com/jwcced345/djy/blob/master/gb/tag/%E5%A5%BD%E6%9C%AA%E6%9D%A5.md#1">好未来</a>（TAL）大跌70.76%，51TALK（COE）跌43.1%，有道（DAO）也跌42.81%??这是华尔街近几年罕见的大杀戮。</p>
+<p>他说，这当中近期因为不听中央的话，到美国上市的滴滴，正面临把股权交出的两难局面，股价大跌逾20%，股价从上市首日最高的18.01跌到7.93美元，正好剩下一半。他在想，这是不是滴滴效应发酵？再仔细看，教育股全面惨跌，中国的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%9B%91%E7%AE%A1%E9%A3%8E%E6%9A%B4.md#1">监管风暴</a>，正持续升高。</p>
+<p>“中共对补教业监管从严，重创过去在美国很受欢迎的教育股。”谢金河举例，像<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E4%B8%9C%E6%96%B9.md#1">新东方</a>在拆股前，股价最高199.74美元，一拆十后，23日股价大跌52.2%，只剩2.91美元，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A5%BD%E6%9C%AA%E6%9D%A5.md#1">好未来</a>（TAL）大跌70.76%，51TALK（COE）跌43.1%，有道（DAO）也跌42.81%??这是华尔街近几年罕见的大杀戮。</p>
 <p>谢金河说，除了教育股，短视频也加重监控，除了腾讯、腾讯音乐、哔哩哔哩（BILI）23日开盘一度大跌20%，最后下跌13.35%，在香港上市的快手从417.8一直跌到127.4港元，已经跌了70%，但跌势未止。在美国上市，市值最大的阿里也跌7.51美元，市值剩5,599亿美元，已经比台积电少近500亿美元。</p>
-<p>中共这一轮加大力道监管已冲击所有有意赴美挂牌的企业，他指出，小米的雷军看情况不对立刻捐出市值20亿美元的股票给中央，而过去对<ahref="https://github.com/jwcced345/djy/blob/master/gb/tag/%E4%B8%AD%E4%BC%81.md#1">中企</a>趋之若鹜的华尔街投行，这回纷纷烫到手，且不敢张扬。这些年好不容易看到中国市场可以开放，大部位资金投入，没想到，全成待宰羔羊。</p>
+<p>中共这一轮加大力道监管已冲击所有有意赴美挂牌的企业，他指出，小米的雷军看情况不对立刻捐出市值20亿美元的股票给中央，而过去对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E4%BC%81.md#1">中企</a>趋之若鹜的华尔街投行，这回纷纷烫到手，且不敢张扬。这些年好不容易看到中国市场可以开放，大部位资金投入，没想到，全成待宰羔羊。</p>
 <p>谢金河表示，这次恒大债务风暴仍在醖酿，台湾有很多金融机构过去最喜欢中国的高收益债，如果都是像恒大的债很可能很快冲击到台湾。而港股，国企股的连环下挫，很可能是全球股市的黑天鹅或灰犀牛。而从近日香港电台通令对台湾领导人的称谓，连称呼台湾也不行，这个监管无限上纲已经可以看出香港的未来。</p>
 <p>责任编辑：李玲</p>
 	
@@ -19,41 +19,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/7/10/n13080990.md#1">中共扩大打击 审查几乎所有寻求海外IPO中企</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/7/13/n13085972.md#1">滴滴事件惊吓多家中企 赴美IPO计划停摆</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/7/13/n13086604.md#1">滴滴上市失败 卢比奥：应禁美资流入中企</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/7/14/n13087370.md#1">中共打压科企 高盛：将推迟大批中企赴美上市</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/10/n13080990.md#1">中共扩大打击 审查几乎所有寻求海外IPO中企</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/13/n13085972.md#1">滴滴事件惊吓多家中企 赴美IPO计划停摆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/13/n13086604.md#1">滴滴上市失败 卢比奥：应禁美资流入中企</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/14/n13087370.md#1">中共打压科企 高盛：将推迟大批中企赴美上市</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10086108.md#1" target="_blank">郑兢业：人吃与吃人（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10283458.md#1" target="_blank">李庆霖“知青英雄”悲剧是如何造成的(上)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/15/n13163430.md#1">军机与民航机在加拿大上空目击绿色UFO</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/4/23/n12899456.md#1">【命理】妇人虐死继子 自己儿子遭报应</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/7/24/n13112860.md#1">她从婴儿的哭声中 听到了家族灭亡的命运</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/13/n13161080.md#1">【未解之谜】我的前世  是安妮?弗兰克</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/17/n13169214.md#1">【未解之谜】被神选中的大师们</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/19/n13173953.md#1">【直播】国务院记者会及五角大楼谈阿富汗局势</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/19/n13173376.md#1">【拍案惊奇】塔利班出尔反尔 预计5件事让习头疼</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/19/n13173736.md#1">【财商天下】蔚来又出车祸 电动车技术存隐患</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/18/n13169506.md#1">分析：中共提“三次分配” 均贫富风暴来临</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/17/n13169054.md#1">【新闻看点】2天干掉8虎内幕 习近平加速清障</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/18/n13171775.md#1">【远见快评】习“劫富”新政 四大关键问题</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/17/n13168987.md#1">否认追17岁落选港姐 周星驰曾自曝未婚原因</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/18/n13169426.md#1">李若彤庆55岁生日 感恩被叫“姑姑”26年</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/18/n13171388.md#1">户头一度只剩26港元 郑欣宜明年可领母亲遗产</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/17/n13169183.md#1">邓超探班孙俪秀恩爱 赵又廷俨然成电灯泡</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/17/n13167416.md#1">黄秋生门下台湾10星曝光 谢佳见等名列表演班</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/17/n13167697.md#1">韩男网购二手冰箱 底部惊现上亿韩圆钞票</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/18/n13169849.md#1">奇特画面：塔利班分子持枪在游乐园玩碰碰车</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/18/n13170213.md#1">英国小猫一直叫 救了跌落深谷的8旬老妇</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/19/n13173007.md#1">为什么喂鸭子吃面包会害了它们？</a></li>
-<li><a href="https://github.com/jwcced345/djy/blob/master/gb/21/8/18/n13170814.md#1">【直播】美国2州疫苗接种率高 疫情有史最高</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jwcced345/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jwcced345/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13115994.htm">谢金河：山雨欲来风满楼 中企陷入监管风暴</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/26/n13115994.htm">谢金河：山雨欲来风满楼 中企陷入监管风暴</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jwcced345/djy/blob/master/gb/21/7/26/n13115994.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jwcced345/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jwcced345/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jwcced345/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jwcced345/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jwcced345/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/7/26/n13115994.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
